Restored to '9b2eb03ded18d71e74c8e3f59dc6b39708045d9c'
Replit-Restored-To: 9b2eb03ded18d71e74c8e3f59dc6b39708045d9c

--- a/public/complete_study_tracker.html
+++ b/public/complete_study_tracker.html
@@ -333,9 +333,8 @@
         
         /* Custom style for selected tab */
         .tab-selected {
-            background-color: var(--light-gray) !important;
-            color: var(--accent-blue) !important;
-            border: none !important;
+            background-color: var(--accent-blue) !important;
+            color: var(--white) !important;
         }
     </style>
 </head>
