--- a/public/complete_study_tracker.html
+++ b/public/complete_study_tracker.html
@@ -333,9 +333,8 @@
         
         /* Custom style for selected tab */
         .tab-selected {
-            background-color: var(--light-gray) !important;
-            color: var(--accent-blue) !important;
-            border: none !important;
+            background-color: var(--accent-blue) !important;
+            color: var(--white) !important;
         }
     </style>
 </head>
@@ -1062,7 +1061,7 @@
                                         className={`px-4 py-2 rounded-lg font-medium transition-colors capitalize ${
                                             currentView === view 
                                                 ? 'tab-selected' 
-                                                : 'bg-gray-300 text-gray-900 hover:bg-gray-400'
+                                                : 'text-gray-600 hover:bg-gray-100'
                                         }`}
                                     >
                                         {view}
